feat: add navigation

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello!</title>
+    <title>Rest Countries API Challenge</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body class="bg-gray-200 p-4">
+  <body>
     <div id="app"></div>
-    <img
-      src="./_resources/img/logo-dark-vertical-1.png"
-      alt="Logo projektu Opanuj Frontend"
-      class="w-32 mt-4 mx-auto"
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="..."
+      crossorigin="anonymous"
     />
+
     <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
